--- a/index.qmd
+++ b/index.qmd
@@ -575,6 +575,12 @@ else:
 summary_block = f"""
 ### **Original vs Modified Strategy (50% at Risk)**
 
+# align below original strategy and modified strategy in a table format for quarto markdown
+| Strategy | Mean Final Balance | Median Final Balance | Standard Deviation | Minimum | Maximum | P(final > ${starting_balance:,}) | Profitable Simulations |
+|----------|-------------------|---------------------|--------------------|---------|---------|--------------------------------|------------------------|
+| Original | ${orig_mean:,.2f} | ${orig_median:,.2f} | ${orig_std:,.2f} | ${orig_min:,.2f} | ${orig_max:,.2f} | {orig_prob_gain:.2%} | {np.sum(original_balances > starting_balance)}/{n_simulations} |
+| Modified | ${mod_mean:,.2f} | ${mod_median:,.2f} | ${mod_std:,.2f} | ${mod_min:,.2f} | ${mod_max:,.2f} | {mod_prob_gain:.2%} | {np.sum(modified_balances > starting_balance)}/{n_simulations} |
+
 #### Original Strategy (Full Balance at Risk)
 * Mean final balance: ${orig_mean:,.2f}
 * Median final balance: ${orig_median:,.2f}
@@ -649,7 +655,7 @@ display(Markdown(summary))
 
 ### 6) Briefly Explain Your Findings From The Previous Step in Light of A Concept Known as the "Kelly Criterion"
  
-## Kelly Criterion Summary
+### Kelly Criterion Summary
 
 ```{python}
 #| label: q6-kelly-criterion
